# McSema-decompiler

./: .gitignore  .travis.yml  CMakeLists.txt  build.bat  installer.py  run_tests.sh  setup.sh  setup_utils.sh.inc  travis.sh
cmake/: BCCompiler.cmake  LLVMUtils.cmake  settings.cmake
cmake/BCCompiler/: CMakeBCInformation.cmake  CMakeDetermineBCCompiler.cmake
installer/: cmakewrapper.py  linux.py  osx.py  utils.py  windows.py
mc-sema/bin_descend/: get_cfg.py
mc-sema/tests/: demo1.sh  demo10.sh  demo11.sh  demo13.sh  demo14.sh  demo15.sh  demo16.sh  demo2.sh  demo3.sh  demo4.sh  demo5.sh  demo6.sh  demo7.sh  demo8.sh  demo9.sh  demo_all.sh  demo_fpu1.c  demo_fpu1.sh  demo_sailboat.sh  demo_test1.c  demo_test10.c  demo_test11.c  demo_test13.c  demo_test14.c  demo_test15.c  demo_test16.c  demo_test2.c  demo_test3.c  demo_test4.c  demo_test5.c  demo_test6.c  demo_test7.c  demo_test8.c  demo_test9.c  sailboat.c
mcsema/: Globals.cpp  Globals.h  Lift.cpp  main.cpp
mcsema/Arch/: Arch.cpp  Arch.h  Dispatch.h  Register.h
mcsema/Arch/MIPS/: CMakeLists.txt
mcsema/Arch/MIPS/include/mcsema/: mips_module.h  mips_utils.h
mcsema/Arch/MIPS/include/mcsema/mips/: interface.h
mcsema/Arch/MIPS/src/: MipsModule.cpp  MipsModule.h  interface.cpp  mips_module.cpp
mcsema/Arch/X86/: CMakeLists.txt  Register.cpp
mcsema/Arch/X86/Runtime/: CMakeLists.txt
mcsema/Arch/X86/Semantics/: Branches.cpp  Exchanges.cpp  String.cpp
mcsema/Arch/X86/Semantics/Bitcode/: CMakeLists.txt
mcsema/Arch/X86/include/mcsema/X86/: interface.h
mcsema/Arch/X86/src/: Dispatch.cpp  Dispatch.h  Lift.cpp  Lift.h  Register.cpp  Register.h  Util.cpp  X86Module.cpp  X86Module.h  interface.cpp
mcsema/Arch/X86/src/Runtime/: CMakeLists.txt
mcsema/Arch/X86/src/Semantics/: ADD.cpp  ADD.h  Branches.cpp  Branches.h  CMOV.cpp  CMOV.h  CMPTEST.cpp  CMPTEST.h  Exchanges.cpp  Exchanges.h  INCDECNEG.cpp  INCDECNEG.h  Jcc.cpp  Jcc.h  MOV.cpp  MOV.h  MULDIV.cpp  MULDIV.h  Misc.cpp  Misc.h  SETcc.cpp  SETcc.h  SSE.cpp  SSE.h  SUB.cpp  SUB.h  ShiftRoll.cpp  ShiftRoll.h  Stack.cpp  Stack.h  String.cpp  String.h  bitops.cpp  bitops.h  flagops.h  fpu.cpp
mcsema/Arch/X86/src/Semantics/Bitcode/: FXAM.cpp  Instruction.h
mcsema/BC/: DeadRegElimination.cpp  DeadRegElimination.h  Function.cpp  Lift.cpp  Util.cpp  Util.h
mcsema/CFG/: CFG.cpp  CFG.h  CFG.proto
mcsema/Runtime/X86/: CMakeLists.txt
mcsema/Runtime/X86/bitcode/: FXAM.cpp  Instruction.h
mcsema/cfgToLLVM/: JumpTables.cpp  raiseX86.cpp  raiseX86.h  x86Helpers.cpp  x86Helpers.h  x86Instrs_Branches.cpp  x86Instrs_MOV.cpp  x86Instrs_SSE.cpp  x86Instrs_fpu.cpp
mcsema/include/mcsema/: IMCSemaModule.h  module_interface.h
tests/: integration_test.py
tests/libFuzzer/: buildFuzzer.sh
tools/mcsema_disass/ida/: get_cfg.py  remill.py
windows/mcsema_launcher/: .gitignore  main.cpp  mainwindow.cpp  mainwindow.h  mcsema_launcher.rc  mcsema_launcher.sln  mcsema_launcher.vcxproj  mcsema_launcher.vcxproj.filters  programfinder.cpp  programfinder.h  resource.h  types.h
windows/msi_installer/: CMakeLists.txt  installer.wxs  test_environment.py  trailofbits_mcsema.wxs
windows/protobuf_cmake_findpackage/: FindProtobuf.cmake
